// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error should render Error Component in general case 1`] = `
.c2 {
  height: 280px;
  position: relative;
  z-index: -1;
}

.c3 {
  font-size: 230px;
  margin: 0;
  font-weight: 900;
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: url(/images/oops.jpg) no-repeat;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-size: cover;
  background-position: center;
}

.c4 {
  font-family: "Open Sans",Tahoma,Verdana,Arial,sans-serif;
  color: #2c3e50;
  font-size: 22px;
  font-weight: 700;
  text-transform: uppercase;
  margin: 10px;
}

.c5 {
  color: #2c3e50;
  font-size: 14px;
  font-weight: 400;
  margin: 10px;
}

.c6 {
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #FFA726;
  display: inline-block;
  padding: 15px 30px;
  border-radius: 40px;
  color: #ecf0f1;
  font-weight: 700;
  box-shadow: 0 4px 15px -5px #FFA726;
  border: none;
  margin: 10px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 50%;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background-color: #ecf0f1;
}

.c1 {
  max-width: 410px;
  position: relative;
  float: left;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

@media only screen and (max-width:767px) {
  .c2 {
    height: 142px;
  }
}

@media only screen and (max-width:767px) {
  .c3 {
    font-size: 112px;
  }
}

<Error>
  <Error__Container>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Error__Container-sc-31377m-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:absolute;width:100%;height:100%;top:50%;text-align:center;transform:translateY(-50%);background-color:",
              [Function],
              ";",
            ],
          },
          "displayName": "Error__Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Error__Container-sc-31377m-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Error__Content>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Error__Content-sc-31377m-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "max-width:410px;position:relative;float:left;top:50%;left:50%;transform:translate(-50%,-50%);",
                  ],
                },
                "displayName": "Error__Content",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Error__Content-sc-31377m-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            >
              <General>
                <Layout
                  description="There are some errors happened during the process, please back to home page and try again."
                  title="An error occurred"
                >
                  <Header>
                    <Header__Container>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Header__Container-sc-3t8r38-0",
                              "isStatic": false,
                              "lastClassName": "c2",
                              "rules": Array [
                                "height:280px;position:relative;z-index:-1;@media only screen and (max-width:767px){height:142px;}",
                              ],
                            },
                            "displayName": "Header__Container",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Header__Container-sc-3t8r38-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <Header__Style>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Header__Style-sc-3t8r38-1",
                                    "isStatic": false,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      "@media only screen and (max-width:767px){font-size:112px;}font-size:230px;margin:0;font-weight:900;position:absolute;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);background:url(/images/oops.jpg) no-repeat;-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-size:cover;background-position:center;",
                                    ],
                                  },
                                  "displayName": "Header__Style",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Header__Style-sc-3t8r38-1",
                                  "target": "h1",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <h1
                                className="c3"
                              >
                                Oops!
                              </h1>
                            </StyledComponent>
                          </Header__Style>
                        </div>
                      </StyledComponent>
                    </Header__Container>
                  </Header>
                  <Title>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Title-sc-1cvjtui-0",
                            "isStatic": false,
                            "lastClassName": "c4",
                            "rules": Array [
                              "font-family:",
                              [Function],
                              ";color:",
                              [Function],
                              ";font-size:",
                              [Function],
                              ";font-weight:700;text-transform:uppercase;margin:10px;",
                            ],
                          },
                          "displayName": "Title",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Title-sc-1cvjtui-0",
                          "target": "h2",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <h2
                        className="c4"
                      >
                        An error occurred
                      </h2>
                    </StyledComponent>
                  </Title>
                  <Description>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Description-sc-1e43su6-0",
                            "isStatic": false,
                            "lastClassName": "c5",
                            "rules": Array [
                              "color:",
                              [Function],
                              ";font-size:14px;font-weight:400;margin:10px;",
                            ],
                          },
                          "displayName": "Description",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Description-sc-1e43su6-0",
                          "target": "p",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <p
                        className="c5"
                      >
                        There are some errors happened during the process, please back to home page and try again.
                      </p>
                    </StyledComponent>
                  </Description>
                  <Link
                    href="/"
                  >
                    <Button
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Button-sc-9m8lcb-0",
                              "isStatic": false,
                              "lastClassName": "c6",
                              "rules": Array [
                                "font-size:",
                                [Function],
                                ";text-decoration:none;text-transform:uppercase;background:",
                                [Function],
                                ";display:inline-block;padding:15px 30px;border-radius:40px;color:",
                                [Function],
                                ";font-weight:700;box-shadow:0 4px 15px -5px ",
                                [Function],
                                ";border:none;margin:10px;cursor:pointer;",
                              ],
                            },
                            "displayName": "Button",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Button-sc-9m8lcb-0",
                            "target": "a",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={[Function]}
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                      >
                        <a
                          className="c6"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                        >
                           Go To Homepage 
                        </a>
                      </StyledComponent>
                    </Button>
                  </Link>
                </Layout>
              </General>
            </div>
          </StyledComponent>
        </Error__Content>
      </div>
    </StyledComponent>
  </Error__Container>
</Error>
`;

exports[`Error should render Error Component with 404 1`] = `
.c2 {
  height: 280px;
  position: relative;
  z-index: -1;
}

.c3 {
  font-size: 230px;
  margin: 0;
  font-weight: 900;
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: url(/images/oops.jpg) no-repeat;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-size: cover;
  background-position: center;
}

.c4 {
  font-family: "Open Sans",Tahoma,Verdana,Arial,sans-serif;
  color: #2c3e50;
  font-size: 22px;
  font-weight: 700;
  text-transform: uppercase;
  margin: 10px;
}

.c5 {
  color: #2c3e50;
  font-size: 14px;
  font-weight: 400;
  margin: 10px;
}

.c6 {
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #FFA726;
  display: inline-block;
  padding: 15px 30px;
  border-radius: 40px;
  color: #ecf0f1;
  font-weight: 700;
  box-shadow: 0 4px 15px -5px #FFA726;
  border: none;
  margin: 10px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 50%;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background-color: #ecf0f1;
}

.c1 {
  max-width: 410px;
  position: relative;
  float: left;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

@media only screen and (max-width:767px) {
  .c2 {
    height: 142px;
  }
}

@media only screen and (max-width:767px) {
  .c3 {
    font-size: 112px;
  }
}

<Error
  statusCode={404}
>
  <Error__Container>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Error__Container-sc-31377m-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:absolute;width:100%;height:100%;top:50%;text-align:center;transform:translateY(-50%);background-color:",
              [Function],
              ";",
            ],
          },
          "displayName": "Error__Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Error__Container-sc-31377m-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Error__Content>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Error__Content-sc-31377m-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "max-width:410px;position:relative;float:left;top:50%;left:50%;transform:translate(-50%,-50%);",
                  ],
                },
                "displayName": "Error__Content",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Error__Content-sc-31377m-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            >
              <NotFound>
                <Layout
                  description="The page you are looking for might have been removed had its name changed or is temporarily unavailable."
                  title="An error 404 occurred"
                >
                  <Header>
                    <Header__Container>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Header__Container-sc-3t8r38-0",
                              "isStatic": false,
                              "lastClassName": "c2",
                              "rules": Array [
                                "height:280px;position:relative;z-index:-1;@media only screen and (max-width:767px){height:142px;}",
                              ],
                            },
                            "displayName": "Header__Container",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Header__Container-sc-3t8r38-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <Header__Style>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Header__Style-sc-3t8r38-1",
                                    "isStatic": false,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      "@media only screen and (max-width:767px){font-size:112px;}font-size:230px;margin:0;font-weight:900;position:absolute;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);background:url(/images/oops.jpg) no-repeat;-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-size:cover;background-position:center;",
                                    ],
                                  },
                                  "displayName": "Header__Style",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Header__Style-sc-3t8r38-1",
                                  "target": "h1",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <h1
                                className="c3"
                              >
                                Oops!
                              </h1>
                            </StyledComponent>
                          </Header__Style>
                        </div>
                      </StyledComponent>
                    </Header__Container>
                  </Header>
                  <Title>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Title-sc-1cvjtui-0",
                            "isStatic": false,
                            "lastClassName": "c4",
                            "rules": Array [
                              "font-family:",
                              [Function],
                              ";color:",
                              [Function],
                              ";font-size:",
                              [Function],
                              ";font-weight:700;text-transform:uppercase;margin:10px;",
                            ],
                          },
                          "displayName": "Title",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Title-sc-1cvjtui-0",
                          "target": "h2",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <h2
                        className="c4"
                      >
                        An error 404 occurred
                      </h2>
                    </StyledComponent>
                  </Title>
                  <Description>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Description-sc-1e43su6-0",
                            "isStatic": false,
                            "lastClassName": "c5",
                            "rules": Array [
                              "color:",
                              [Function],
                              ";font-size:14px;font-weight:400;margin:10px;",
                            ],
                          },
                          "displayName": "Description",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Description-sc-1e43su6-0",
                          "target": "p",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <p
                        className="c5"
                      >
                        The page you are looking for might have been removed had its name changed or is temporarily unavailable.
                      </p>
                    </StyledComponent>
                  </Description>
                  <Link
                    href="/"
                  >
                    <Button
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Button-sc-9m8lcb-0",
                              "isStatic": false,
                              "lastClassName": "c6",
                              "rules": Array [
                                "font-size:",
                                [Function],
                                ";text-decoration:none;text-transform:uppercase;background:",
                                [Function],
                                ";display:inline-block;padding:15px 30px;border-radius:40px;color:",
                                [Function],
                                ";font-weight:700;box-shadow:0 4px 15px -5px ",
                                [Function],
                                ";border:none;margin:10px;cursor:pointer;",
                              ],
                            },
                            "displayName": "Button",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Button-sc-9m8lcb-0",
                            "target": "a",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={[Function]}
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                      >
                        <a
                          className="c6"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                        >
                           Go To Homepage 
                        </a>
                      </StyledComponent>
                    </Button>
                  </Link>
                </Layout>
              </NotFound>
            </div>
          </StyledComponent>
        </Error__Content>
      </div>
    </StyledComponent>
  </Error__Container>
</Error>
`;

exports[`Error should render Error Component with 500 1`] = `
.c2 {
  height: 280px;
  position: relative;
  z-index: -1;
}

.c3 {
  font-size: 230px;
  margin: 0;
  font-weight: 900;
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: url(/images/oops.jpg) no-repeat;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-size: cover;
  background-position: center;
}

.c4 {
  font-family: "Open Sans",Tahoma,Verdana,Arial,sans-serif;
  color: #2c3e50;
  font-size: 22px;
  font-weight: 700;
  text-transform: uppercase;
  margin: 10px;
}

.c5 {
  color: #2c3e50;
  font-size: 14px;
  font-weight: 400;
  margin: 10px;
}

.c6 {
  font-size: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #FFA726;
  display: inline-block;
  padding: 15px 30px;
  border-radius: 40px;
  color: #ecf0f1;
  font-weight: 700;
  box-shadow: 0 4px 15px -5px #FFA726;
  border: none;
  margin: 10px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 50%;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background-color: #ecf0f1;
}

.c1 {
  max-width: 410px;
  position: relative;
  float: left;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

@media only screen and (max-width:767px) {
  .c2 {
    height: 142px;
  }
}

@media only screen and (max-width:767px) {
  .c3 {
    font-size: 112px;
  }
}

<Error
  statusCode={500}
>
  <Error__Container>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Error__Container-sc-31377m-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:absolute;width:100%;height:100%;top:50%;text-align:center;transform:translateY(-50%);background-color:",
              [Function],
              ";",
            ],
          },
          "displayName": "Error__Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Error__Container-sc-31377m-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <Error__Content>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Error__Content-sc-31377m-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "max-width:410px;position:relative;float:left;top:50%;left:50%;transform:translate(-50%,-50%);",
                  ],
                },
                "displayName": "Error__Content",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Error__Content-sc-31377m-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c1"
            >
              <InternalServer>
                <Layout
                  description="The server encountered an internal error or misconfiguration and was unable to complete your request."
                  title="An error 500 Internal Server Error occurred"
                >
                  <Header>
                    <Header__Container>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Header__Container-sc-3t8r38-0",
                              "isStatic": false,
                              "lastClassName": "c2",
                              "rules": Array [
                                "height:280px;position:relative;z-index:-1;@media only screen and (max-width:767px){height:142px;}",
                              ],
                            },
                            "displayName": "Header__Container",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Header__Container-sc-3t8r38-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          <Header__Style>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Header__Style-sc-3t8r38-1",
                                    "isStatic": false,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      "@media only screen and (max-width:767px){font-size:112px;}font-size:230px;margin:0;font-weight:900;position:absolute;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);background:url(/images/oops.jpg) no-repeat;-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-size:cover;background-position:center;",
                                    ],
                                  },
                                  "displayName": "Header__Style",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Header__Style-sc-3t8r38-1",
                                  "target": "h1",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <h1
                                className="c3"
                              >
                                Oops!
                              </h1>
                            </StyledComponent>
                          </Header__Style>
                        </div>
                      </StyledComponent>
                    </Header__Container>
                  </Header>
                  <Title>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Title-sc-1cvjtui-0",
                            "isStatic": false,
                            "lastClassName": "c4",
                            "rules": Array [
                              "font-family:",
                              [Function],
                              ";color:",
                              [Function],
                              ";font-size:",
                              [Function],
                              ";font-weight:700;text-transform:uppercase;margin:10px;",
                            ],
                          },
                          "displayName": "Title",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Title-sc-1cvjtui-0",
                          "target": "h2",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <h2
                        className="c4"
                      >
                        An error 500 Internal Server Error occurred
                      </h2>
                    </StyledComponent>
                  </Title>
                  <Description>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Description-sc-1e43su6-0",
                            "isStatic": false,
                            "lastClassName": "c5",
                            "rules": Array [
                              "color:",
                              [Function],
                              ";font-size:14px;font-weight:400;margin:10px;",
                            ],
                          },
                          "displayName": "Description",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Description-sc-1e43su6-0",
                          "target": "p",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <p
                        className="c5"
                      >
                        The server encountered an internal error or misconfiguration and was unable to complete your request.
                      </p>
                    </StyledComponent>
                  </Description>
                  <Link
                    href="/"
                  >
                    <Button
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Button-sc-9m8lcb-0",
                              "isStatic": false,
                              "lastClassName": "c6",
                              "rules": Array [
                                "font-size:",
                                [Function],
                                ";text-decoration:none;text-transform:uppercase;background:",
                                [Function],
                                ";display:inline-block;padding:15px 30px;border-radius:40px;color:",
                                [Function],
                                ";font-weight:700;box-shadow:0 4px 15px -5px ",
                                [Function],
                                ";border:none;margin:10px;cursor:pointer;",
                              ],
                            },
                            "displayName": "Button",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Button-sc-9m8lcb-0",
                            "target": "a",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={[Function]}
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                      >
                        <a
                          className="c6"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                        >
                           Go To Homepage 
                        </a>
                      </StyledComponent>
                    </Button>
                  </Link>
                </Layout>
              </InternalServer>
            </div>
          </StyledComponent>
        </Error__Content>
      </div>
    </StyledComponent>
  </Error__Container>
</Error>
`;
